<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".QuizActivity">

    <ImageView
            android:layout_width="286dp"
            android:layout_height="251dp"
            android:id="@+id/quiz_pic"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="62dp"
            android:layout_marginStart="62dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="63dp"
            android:layout_marginRight="63dp" app:layout_constraintHorizontal_bias="1.0"
    />//app:srcCompat="@drawable/person2"/>
    <TextView
            android:gravity="center"
            android:layout_width="201dp"
            android:layout_height="43dp"
            android:id="@+id/quiz_who"
            android:textSize="24sp" android:textStyle="bold" android:textColor="@android:color/black"
            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/quiz_pic"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="105dp"
            android:layout_marginRight="105dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="105dp" android:layout_marginStart="105dp"
            android:text="@string/quiz_who_is_this" app:layout_constraintHorizontal_bias="0.0"/>
    <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:text=""
            android:gravity="center"
            android:ems="10"
            android:id="@+id/quiz_input"
            android:textColor="@android:color/black" android:textSize="24sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/quiz_who" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="63dp" android:layout_marginRight="63dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="63dp"
            android:layout_marginStart="63dp" app:layout_constraintHorizontal_bias="1.0"/>
    <Button
            android:text="@string/quiz_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/button_quiz_next"
            android:background="@drawable/button_background" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/quiz_input" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="55dp" android:layout_marginStart="55dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="56dp" android:layout_marginRight="56dp" android:textSize="30sp"
            android:textStyle="bold" android:textColor="#FFFFFF" app:layout_constraintHorizontal_bias="1.0"/>
    <TextView
            android:gravity="center"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/quiz_correct_emoji"
            android:textSize="24sp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginLeft="40dp" android:layout_marginStart="40dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_quiz_next"/>
    <TextView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:id="@+id/quiz_correct_score"
            android:gravity="center"
            android:textSize="24sp"
            android:textColor="#000000" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_quiz_next"
            app:layout_constraintStart_toEndOf="@+id/quiz_correct_emoji"/>
    <TextView
            android:text="TextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:id="@+id/quiz_wrong_emoji"
            android:textSize="24sp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_quiz_next"
            app:layout_constraintEnd_toStartOf="@+id/quiz_wrong_score"/>
    <TextView
            android:text="TextView"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:id="@+id/quiz_wrong_score"
            android:textSize="24sp"
            android:textColor="#000000" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="40dp" android:layout_marginRight="40dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/button_quiz_next"/>
</android.support.constraint.ConstraintLayout>